--- a/test/data/configs/hestia.yaml
+++ b/test/data/configs/hestia.yaml
@@ -3,11 +3,13 @@ server:
   host_port: 8080
   web_app: hestia::HsmService
   backend: hestia::Basic
+  controller: true
 
 web_apps:
   - identitifier: hestia::HsmService
-  - identitifier: hestia::HsmS3Service
-  - identitifier: hestia::CopyTool
+    interface: http
+  - identitifier: hestia::HsmServiceS3
+    interface: s3
 
 server_backends:
   - identifier: hestia::Basic
