--- a/src/hsm/object_store/client/CMakeLists.txt
+++ b/src/hsm/object_store/client/CMakeLists.txt
@@ -4,14 +4,14 @@ add_module(
     MODULE_NAME hsm_object_store_client 
     HEADERS
         HsmObjectStoreClient.h
-        HsmObjectStoreClientSpec.h
+        HsmObjectStoreClientBackend.h
         HsmObjectStoreClientPlugin.h
         HsmObjectStoreClientManager.h
         HsmObjectStoreClientFactory.h
         file/FileHsmObjectStoreClient.h
     SOURCES
         HsmObjectStoreClient.cc
-        HsmObjectStoreClientSpec.cc
+        HsmObjectStoreClientBackend.cc
         HsmObjectStoreClientPlugin.cc
         HsmObjectStoreClientManager.cc
         HsmObjectStoreClientFactory.cc
@@ -20,6 +20,7 @@ add_module(
         file
     INTERNAL_DEPENDENCIES 
         hsm_object_store_common
+        hsm_base_types
 )
 
 add_subdirectory(motr)
