--- a/test/integration_tests/CMakeLists.txt
+++ b/test/integration_tests/CMakeLists.txt
@@ -4,6 +4,7 @@ set(INTEGRATION_TEST_SOURCES
     base/storage/TestS3Client_Integration.cc
     base/network/TestBasicHttpServer.cc
     base/network/TestCurlClient.cc
+    hestia/TestHestiaWebApp.cc
     main.cc
     )
 
