--- a/test/data/phobos.conf
+++ b/test/data/phobos.conf
@@ -1,9 +1,12 @@
 [dss]
-connect_string = dbname=phobos host=localhost user=phobos password=phobos
+connect_string = dbname=phobos host=phobosdb user=phobos password=phobos
 
 [lrs]
 server_socket = /tmp/socklrs
 default_family = dir
+sync_time_ms = tape=10000,dir=10,rados_pool=10
+sync_nb_req = tape=1,dir=1,rados_pool=5
+sync_wsize_kb = tape=1048576,dir=1048576,rados_pool=1048576
 
 [tape_model]
 supported_list = LTO5,LTO6,LTO7,LTO8,ratatouille
@@ -19,4 +22,11 @@ drive_rw = LTO5_drive,LTO6_drive
 
 [tape_type "LTO6"]
 drive_rw = LTO6_drive
+
+[store]
+default_alias = simple
+
+[alias "simple"]
+layout = raid1
+lyt-params = repl_count=1
 
