Add consistent default install path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,4 +41,7 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     add_clang_tidy()
 endif()
 
+if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+  set(CMAKE_INSTALL_PREFIX "/usr" CACHE PATH "Install Prefix" FORCE)
+endif()
 include(DoPackaging)
